kubernetes-networks/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: hw3
spec: {}
status: {}
