kubernetes-networks/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: hw3
  labels:
    app: static-web-server-service
  name: static-web-server-service
spec:
  ports:
    - name: 8000-8000
      port: 80
      protocol: TCP
      targetPort: 8000
  selector:
    app: static-web-server
  type: ClusterIP
